--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -132,7 +132,7 @@
 }
 
 #custom-menu {
-  background-color: rgb(0, 255, 136);
+  background-color: #FF00CC;
   padding-left: 10px;
   padding-right: 14px;
 }
@@ -182,7 +182,7 @@
   padding-bottom: 2px;
   padding-left: 10px;
   padding-right: 10px;
-  color: rgb(0, 255, 136);
+  color: #FF00CC;
 }
 
 #workspaces button.focused {
