--- a/waybar/style.css
+++ b/waybar/style.css
@@ -52,7 +52,7 @@
 #waybar {
   background: black;
   color: white;
-  font-size: 12px;
+  font-size: 11px;
 }
 
 #custom-btc-price {
@@ -119,7 +119,7 @@
 
 #clock {
   font-weight: bold;
-  color: rgb(0, 255, 136);
+  /* color: rgb(0, 255, 136); */
   /* color: #111; */
 }
 
@@ -182,8 +182,15 @@
   /* padding-bottom: 2px; */
   /* padding-left: 10px; */
   /* padding-right: 10px; */
-  padding: 2px 10px;
+  padding: 0px 10px;
   color: white;
+}
+
+#workspaces button:hover {
+  box-shadow: inherit;
+  text-shadow: inherit;
+  background: none;
+  color: rgb(0, 255, 136);
 }
 
 #workspaces button.focused {
